syntax = "proto3";

// 后台管理 => 会员登录服务

package login;


enum CMD {
    Msg_HeartReq        = 5000;
    Msg_HeartResp       = 5001;
    Msg_SysError        = 5002;
    CheckTokenReq       = 5003;
    MovedGateNot        = 5004;
    CheckTokenRes       = 5005;
    Msg_UserLogInReq    = 10000;
    Msg_UserLogInResp   = 10001;
}

//心跳
message HeartReq{
}

message HeartResp{
  int64 serverTime  = 1;  //服务器时间
}

//校验token
message CheckTokenRequest {
  int64 uid = 1;
  string token = 2;
}

message CheckTokenResponse {
}

//重定向网关通知
message MovedGateNotice {
  string wsUri = 1;
}


message UserInfo {
    int64 userid = 1;
    string name = 2;
    string headicon = 3; //会员头像
    int64 coin = 4; //金额
    string sign = 5; //签名
}

message UserLogInReq {
    string token = 1; //token
}

message UserLogInResp {
    UserInfo data = 1;
}